Align Profile Card using negative margin top - to fix spacing issues when using bottom property with relative layout

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -6,8 +6,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        position: relative;
-        bottom: ($profile-pic-size + $profile-border-size ) / 2;
+        margin-top: - ( ($profile-pic-size + $profile-border-size ) / 2);
     }
 
     &__name {
